# file-search

./: .gitignore  Cargo.toml  readme.md
src/: docx.rs  docx_parser.rs  lib.rs  main.rs  pdf_parser.rs  util.rs  util_parsers.rs
