[package]
name = "file-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docx = "1.1.2"
nom = "7.1.3"
roxmltree = "0.18.0"
zip = "0.6.4"
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
shellexpand = "3.1.0"
pdf-extract = "0.6.5"
